--- a/peripheral device/peripheral device.csproj
+++ b/peripheral device/peripheral device.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>peripheral_device</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
